--- a/templates/admin/admin_user/index.html.twig
+++ b/templates/admin/admin_user/index.html.twig
@@ -1,20 +1,38 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AdminUserController!{% endblock %}
+{% block title %}Gestion des utilisateurs{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/tristan/Bureau/dev/phpProject/lebonangle/src/Controller/AdminUserController.php'|file_link(0) }}">src/Controller/AdminUserController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/tristan/Bureau/dev/phpProject/lebonangle/templates/admin_user/index.html.twig'|file_link(0) }}">templates/admin_user/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <h1>Gestions des utilisateurs admins</h1>
+    {% for message in app.flashes('success') %}
+        <div class="alert alert-success">
+            {{ message }}
+        </div>
+    {% endfor %}
+    <a role="button" href="{{ path('admin_user_add') }}" class="btn btn-primary">Ajouter</a>
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Username</th>
+            <th scope="col">Email</th>
+            <th scope="col">Action</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for admin in admins %}
+        <tr>
+            <td>{{ admin.id }}</td>
+            <td>{{ admin.username }}</td>
+            <td>{{ admin.email }}</td>
+            <td>
+                <a role="button" href="{{ path('admin_user_edit',{id:admin.id}) }}" class="btn btn-primary">Modifier</a>
+                {% if app.user.id != admin.id %}
+                    <a role="button" onclick="return confirm('Etes vous sur de vouloir supprimer l\'utilisateur {{ admin.username }}')" href="{{ path('admin_user_delete',{id:admin.id,_token:csrf_token('delete-user-' ~ admin.id)}) }}" class="btn btn-danger">Supprimer</a>
+                {% endif %}
+            </td>
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
