--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
                     <a class="nav-link" href="{{ path('admin') }}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Categorie</a>
+                    <a class="nav-link" href="{{ path('admin_category') }}">Categorie</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Annonce</a>
