--- a/templates/admin/admin_user/index.html.twig
+++ b/templates/admin/admin_user/index.html.twig
@@ -9,6 +9,11 @@
             {{ message }}
         </div>
     {% endfor %}
+    {% for message in app.flashes('error') %}
+        <div class="alert alert-danger">
+            {{ message }}
+        </div>
+    {% endfor %}
     <a role="button" href="{{ path('admin_user_add') }}" class="btn btn-primary">Ajouter</a>
     <table class="table">
         <thead>
